--- a/css/styles.css
+++ b/css/styles.css
@@ -1,185 +1,3 @@
-:root {
-  --main-title-color: #ffffff;
-  --second-title-color: #212121;
-  --main-text-color: #757575;
-  --second-text-color: #212121;
-  --main-btn-color: #ffffff;
-  --header-text-color: #212121;
-  --header-contact: #757575;
-  --accent-color: #2196f3;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-img {
-  display: block;
-}
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
-}
-button {
-  cursor: pointer;
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
-  color: #757575;
-}
-.list {
-  list-style: none;
-}
-
-.link {
-  text-decoration: none;
-}
-
-.btn {
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  cursor: pointer;
-  transition: color 250ms linear;
-  transition: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-logo {
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #2196f3;
-}
-
-.header-container {
-  display: flex;
-  align-items: center;
-}
-
-.header {
-  border-bottom: 1px solid #eeeeee;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.header-connect {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-}
-.header-social-icon {
-  fill: #757575;
-  margin-right: 10px;
-}
-
-.header-contact:focus .header-social-icon,
-.header-contact:hover .header-social-icon {
-  fill: #2196f3;
-}
-
-.header-logo {
-  margin-right: 92px;
-}
-.header-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.connect-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-logo-two {
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #000000;
-}
-
-.header-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.33;
-  letter-spacing: 0.02em;
-  color: var(--header-text-color);
-  padding-top: 27px;
-  padding-bottom: 37px;
-  display: block;
-  transition: color 250ms linear;
-  position: relative;
-  transition: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-link-index {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.33;
-  letter-spacing: 0.02em;
-  color: var(--header-text-color);
-  padding-top: 27px;
-  padding-bottom: 37px;
-  display: block;
-  transition: color 250ms linear;
-  position: relative;
-  transition: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-link-index::after {
-  content: '';
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-  position: absolute;
-  display: block;
-  bottom: 0;
-  left: 0;
-}
-
-.header-list {
-  display: flex;
-}
-
-.header-link:hover,
-.header-link:focus {
-  color: var(--accent-color);
-}
-
-.header-contact {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.33;
-  letter-spacing: 0.02em;
-  color: var(--header-contact);
-  transition: color 250ms linear;
-  transition: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-contact:hover {
-  color: var(--accent-color);
-}
 /* ---------hero---------- */
 
 .hero {
@@ -658,7 +476,7 @@ body {
   display: flex;
   align-items: center;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);4
+  color: rgba(255, 255, 255, 0.6);
   transition: color 250ms linear;
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -677,21 +495,17 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: #FFFFFF;
+  color: #ffffff;
   justify-content: center;
   border: none;
-
 }
-  .online-form-wrap {
-    display: flex;
-  }
+.online-form-wrap {
+  display: flex;
+}
 
 .footer-online-icon {
   margin-left: 10px;
 }
-
-
-
 
 /* ----------ПОРТФОЛИО--------- */
 /* ---------- buttons --------- */
@@ -846,16 +660,16 @@ body {
   justify-content: center;
 }
 .modal-close-icon {
-  transition: fill: 250ms linear;
+  transition: fill 250ms linear;
   transition: cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
 
 .modal-close-icon:hover,
 .modal-close-icon:focus {
-  fill: #2196F3;
+  fill: #2196f3;
 }
 
-.modal-title{
+.modal-title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -892,16 +706,16 @@ body {
   letter-spacing: 0.01em;
   color: #757575;
   outline: none;
-  transition: border-color: 250ms linear;
+  transition: border-color 250ms linear;
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-input:focus {
-  border-color: #2196F3;
+  border-color: #2196f3;
 }
 
-.modal-form-input:focus + .input-icon{
-  fill: #2196F3;
+.modal-form-input:focus + .input-icon {
+  fill: #2196f3;
 }
 
 .form-input-text {
@@ -911,11 +725,11 @@ body {
   color: #757575;
   margin-bottom: 4px;
   display: block;
-  margin-top: 10px; 
+  margin-top: 10px;
 }
 
 .modal-form-text:focus {
-  border-color: #2196F3;
+  border-color: #2196f3;
 }
 
 .modal-form-text {
@@ -924,7 +738,7 @@ body {
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
-  resize: none  ;
+  resize: none;
   padding: 12px 16px;
   outline: none;
 }
@@ -946,7 +760,7 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration-line: underline;
-  color: #2196F3;
+  color: #2196f3;
 }
 
 .check-item {
@@ -959,7 +773,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 .modal-check:checked + .check-text .check-item {
@@ -967,16 +780,14 @@ body {
   border: none;
 }
 
-
 .check-icon {
-  fill: #FFFFFF;
+  fill: #ffffff;
 }
-
 
 .model-btn {
   width: 200px;
   height: 50px;
-  background: #2196F3;
+  background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   display: block;
@@ -987,7 +798,7 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .modal-form-text::placeholder {
