--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,6 +5,7 @@
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #2196f3;
+  margin-right: 92px;
 }
 
 .header-container {
@@ -26,19 +27,16 @@
   align-items: center;
   margin-left: auto;
 }
+
 .header-social-icon {
   fill: #757575;
   margin-right: 10px;
+  .header-contact:focus &,
+  .header-contact:hover & {
+    fill: #2196f3;
+  }
 }
 
-.header-contact:focus .header-social-icon,
-.header-contact:hover .header-social-icon {
-  fill: #2196f3;
-}
-
-.header-logo {
-  margin-right: 92px;
-}
 .header-item:not(:last-child) {
   margin-right: 50px;
 }
@@ -68,6 +66,10 @@
   transition: color 250ms linear;
   position: relative;
   transition: cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .header-link-index {
@@ -82,27 +84,21 @@
   transition: color 250ms linear;
   position: relative;
   transition: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-link-index::after {
-  content: '';
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-  position: absolute;
-  display: block;
-  bottom: 0;
-  left: 0;
+  &::after {
+    content: '';
+    width: 100%;
+    height: 4px;
+    background: #2196f3;
+    border-radius: 2px;
+    position: absolute;
+    display: block;
+    bottom: 0;
+    left: 0;
+  }
 }
 
 .header-list {
   display: flex;
-}
-
-.header-link:hover,
-.header-link:focus {
-  color: var(--accent-color);
 }
 
 .header-contact {
@@ -113,8 +109,7 @@
   color: var(--header-contact);
   transition: color 250ms linear;
   transition: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-contact:hover {
-  color: var(--accent-color);
+  &:hover {
+    color: var(--accent-color);
+  }
 }
