--- a/sass/layout/_buttons.scss
+++ b/sass/layout/_buttons.scss
@@ -3,12 +3,12 @@
   padding-top: 94px;
 }
 
-.buttons__list {
+.list-buttons {
   display: flex;
   margin-left: 280px;
 }
 
-.buttons__item:not(:last-child) {
+.buttons-item:not(:last-child) {
   margin-right: 8px;
 }
 
