--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -6,14 +6,14 @@
   display: flex;
 }
 
-.skills-item {
+.skills-list__item {
   width: 270px;
   &:not(:last-child) {
     margin-right: 30px;
   }
 }
 
-.skills-block {
+.skills-list__block {
   width: 270px;
   height: 120px;
   background-color: #f5f4fa;
@@ -22,16 +22,16 @@
   justify-content: center;
 }
 
-.skills-social-icon {
+.skills-list__icon {
   display: flex;
   align-items: center;
 }
 
-.skills-block + .skills-block {
+.skills-list__block + .skills-list__block {
   margin-right: 30px;
 }
 
-.skills-title {
+.skills-list__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -41,7 +41,7 @@
   margin-top: 30px;
 }
 
-.skills-text {
+.skills-list__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
