--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -4,34 +4,74 @@
   padding-top: 94px;
 }
 
-.team-list {
+.section-team--title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--second-title-color);
+}
+
+.section-team__list {
   display: flex;
   flex-wrap: wrap;
   margin-top: 50px;
   margin-left: -30px;
 }
 
-.team-item {
+.section-team__item {
   flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
 }
-.team-social-list {
+
+.section-team__botton {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.section-team__title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--second-text-color);
+  margin-bottom: 10px;
+}
+
+.section-team__text {
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+  margin-bottom: 16px;
+}
+
+// Соц сети
+
+.social-list {
   display: flex;
   justify-content: center;
 }
 
-.team-social-item {
+.social-list__item {
   width: 44px;
   height: 44px;
   display: block;
   border-radius: 50%;
 }
 
-.team-social-item + .team-social-item {
+.social-list__item + .social-list__item {
   margin-left: 10px;
 }
 
-.team-social-link {
+.social-list__link {
   width: 100%;
   height: 100%;
   background-color: #fff;
@@ -47,45 +87,11 @@
   }
 }
 
-.team-item-botton {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.section-team-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--second-title-color);
-}
-.team-title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--second-text-color);
-  margin-bottom: 10px;
-}
-
-.team-text {
-  font-size: 16px;
-  line-height: 1.18;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--main-text-color);
-  margin-bottom: 16px;
-}
-.team-social-icon {
+.social-list__icon {
   fill: #afb1b8;
   transition: color 250ms linear;
-  .team-social-link:focus &,
-  .team-social-link:hover & {
+  .social-list__link:focus &,
+  .social-list__link:hover & {
     fill: #fff;
   }
 }
