--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,17 +1,27 @@
 .section-work {
   padding-bottom: 94px;
 }
+
+.section-work__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--second-title-color);
+}
+
 .work-list {
   display: flex;
   margin-top: 50px;
 }
-.work-item:not(:last-child) {
+.work-list__item:not(:last-child) {
   margin-right: 30px;
 }
-.work-item-wrap {
+.work-list__wrap {
   position: relative;
 }
-.work-item-top-text {
+.work-list__text {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -27,13 +37,4 @@
   text-transform: uppercase;
   letter-spacing: 0.03em;
   padding: 27px;
-}
-
-.work-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--second-title-color);
 }
