--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -11,6 +11,7 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--second-title-color);
+  margin-bottom: 0px;
 }
 
 .section-team__list {
