--- a/css/main.css
+++ b/css/main.css
@@ -354,36 +354,34 @@ body {
           align-items: center;
 }
 
-.header-logo {
+.logo {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #2196f3;
+}
+
+.logo__text {
   margin-right: 92px;
 }
 
-.header-logo-two {
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+.logo__text--span {
   color: #000000;
 }
 
-.header-list {
+.site-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.header-item:not(:last-child) {
+.site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.header-link {
+.site-nav__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.33;
@@ -399,11 +397,11 @@ body {
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link:hover, .header-link:focus {
+.site-nav__link:hover, .site-nav__link:focus {
   color: var(--accent-color);
 }
 
-.header-link-index {
+.site-nav__link--index {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.33;
@@ -419,7 +417,7 @@ body {
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link-index::after {
+.site-nav__link--index::after {
   content: '';
   width: 100%;
   height: 4px;
@@ -431,31 +429,24 @@ body {
   left: 0;
 }
 
-.header-connect {
+.connect {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.connect_list {
   margin-left: auto;
-}
-
-.header-social-icon {
-  fill: #757575;
-  margin-right: 10px;
-}
-
-.header-contact:focus .header-social-icon,
-.header-contact:hover .header-social-icon {
-  fill: #2196f3;
 }
 
 .connect-item:not(:last-child) {
   margin-right: 50px;
 }
 
-.header-contact {
+.connect__contact {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.33;
@@ -467,8 +458,18 @@ body {
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-contact:hover {
+.connect__contact:hover {
   color: var(--accent-color);
+}
+
+.connect__icon {
+  fill: #757575;
+  margin-right: 10px;
+}
+
+.connect__contact:focus .connect__icon,
+.connect__contact:hover .connect__icon {
+  fill: #2196f3;
 }
 
 .hero {
@@ -657,6 +658,7 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--second-title-color);
+  margin-bottom: 0px;
 }
 
 .section-team__list {
@@ -763,7 +765,7 @@ body {
   padding-top: 94px;
 }
 
-.section-clients-title {
+.section-clients__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -779,7 +781,11 @@ body {
   display: flex;
 }
 
-.clients-block {
+.clients-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.clients-list__block {
   width: 170px;
   height: 92px;
   display: -webkit-box;
@@ -802,23 +808,19 @@ body {
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-block:hover, .clients-block:focus {
+.clients-list__block:hover, .clients-list__block:focus {
   color: var(--accent-color);
   border: 1px solid var(--accent-color);
 }
 
-.clients-icon {
+.clients-list__icon {
   fill: #afb1b8;
   -webkit-transition: color 250ms linear;
   transition: color 250ms linear;
 }
 
-.clients-icon:focus, .clients-icon:hover {
+.clients-list__icon:focus, .clients-list__icon:hover {
   fill: #2196f3;
-}
-
-.clients-item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .footer {
@@ -889,16 +891,6 @@ body {
   color: var(--accent-color);
 }
 
-.footer-text {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-
 .footer-social {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -909,22 +901,32 @@ body {
   margin-top: 19px;
 }
 
-.footer-social-item {
+.footer-social__item {
   width: 44px;
   height: 44px;
   display: block;
   border-radius: 50%;
 }
 
-.footer-social-item + .footer-social-item {
+.footer-social__item + .footer-social__item {
   margin-left: 10px;
 }
 
-.footer-social-icon {
+.footer__text {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footer-social__icon {
   fill: #ffffff;
 }
 
-.footer .footer-social-link {
+.footer .footer-social__link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -944,24 +946,34 @@ body {
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer .footer-social-link:focus, .footer .footer-social-link:hover {
+.footer .footer-social__link:focus, .footer .footer-social__link:hover {
   background-color: #2196f3;
 }
 
-.footer .footer-social-link:focus .team-social-icon,
-.footer .footer-social-link:hover .team-social-icon {
+.footer .footer-social__link:focus .footer-social__icon,
+.footer .footer-social__link:hover .footer-social__icon {
   fill: #fff;
 }
 
-.online {
+.online__subscription {
   margin-left: 23px;
 }
 
-.online-form {
+.online__text {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.online__form {
   margin-top: 20px;
 }
 
-.online-input {
+.online__input {
   position: absolute;
   width: 358px;
   height: 50px;
@@ -990,27 +1002,27 @@ body {
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.online-input:focus {
+.online__input:focus {
   border-color: #2196f3;
 }
 
-.online-input:focus::-webkit-input-placeholder {
+.online__input:focus::-webkit-input-placeholder {
   color: #ffffff;
 }
 
-.online-input:focus:-ms-input-placeholder {
+.online__input:focus:-ms-input-placeholder {
   color: #ffffff;
 }
 
-.online-input:focus::-ms-input-placeholder {
+.online__input:focus::-ms-input-placeholder {
   color: #ffffff;
 }
 
-.online-input:focus::placeholder {
+.online__input:focus::placeholder {
   color: #ffffff;
 }
 
-.online-input::-webkit-input-placeholder {
+.online__input::-webkit-input-placeholder {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.25;
@@ -1026,7 +1038,7 @@ body {
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.online-input:-ms-input-placeholder {
+.online__input:-ms-input-placeholder {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.25;
@@ -1042,7 +1054,7 @@ body {
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.online-input::-ms-input-placeholder {
+.online__input::-ms-input-placeholder {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.25;
@@ -1058,7 +1070,7 @@ body {
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.online-input::placeholder {
+.online__input::placeholder {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.25;
@@ -1076,7 +1088,7 @@ body {
   transition: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-online {
+.btn__online {
   position: absolute;
   width: 200px;
   height: 50px;
@@ -1102,13 +1114,7 @@ body {
   border: none;
 }
 
-.online-form-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.footer-online-icon {
+.online__icon {
   margin-left: 10px;
 }
 
