--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,34 +12,32 @@
   align-items: center;
 }
 
-.header-logo {
+.logo {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #2196f3;
+}
+
+.logo__text {
   margin-right: 92px;
 }
 
-.header-logo-two {
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+.logo__text--span {
   color: #000000;
 }
 
-.header-list {
+.site-nav {
   display: flex;
 }
 
-.header-item:not(:last-child) {
+.site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.header-link {
+.site-nav__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.33;
@@ -57,7 +55,7 @@
   }
 }
 
-.header-link-index {
+.site-nav__link--index {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.33;
@@ -82,26 +80,20 @@
   }
 }
 
-.header-connect {
+.connect {
   display: flex;
   align-items: center;
-  margin-left: auto;
 }
 
-.header-social-icon {
-  fill: #757575;
-  margin-right: 10px;
-  .header-contact:focus &,
-  .header-contact:hover & {
-    fill: #2196f3;
-  }
+.connect_list {
+  margin-left: auto;
 }
 
 .connect-item:not(:last-child) {
   margin-right: 50px;
 }
 
-.header-contact {
+.connect__contact {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.33;
@@ -111,5 +103,14 @@
   transition: cubic-bezier(0.4, 0, 0.2, 1);
   &:hover {
     color: var(--accent-color);
+  }
+}
+
+.connect__icon {
+  fill: #757575;
+  margin-right: 10px;
+  .connect__contact:focus &,
+  .connect__contact:hover & {
+    fill: #2196f3;
   }
 }
