--- a/css/main.css
+++ b/css/main.css
@@ -839,7 +839,7 @@ body {
   margin-right: 70px;
 }
 
-.footer-logo {
+.footer-logo__text {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
@@ -848,16 +848,11 @@ body {
   color: #2196f3;
 }
 
-.footer-logo-two {
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+.footer-logo__text--span {
   color: #ffffff;
 }
 
-.footer-address {
+.footer-contacts__address {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -866,11 +861,11 @@ body {
   transition: color 250ms linear;
 }
 
-.footer-address:hover, .footer-address:focus {
+.footer-contacts__address:hover, .footer-contacts__address:focus {
   color: var(--accent-color);
 }
 
-.footer .footer-contact {
+.footer .footer-contacts__contact {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -881,13 +876,13 @@ body {
   padding-top: 20px;
 }
 
-.footer-contact {
+.footer-contacts__contact {
   padding-top: 9px;
   -webkit-transition: color 250ms linear;
   transition: color 250ms linear;
 }
 
-.footer-contact:hover, .footer-contact:focus {
+.footer-contacts__contact:hover, .footer-contacts__contact:focus {
   color: var(--accent-color);
 }
 
